compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__pipe_concat.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\nfn id(x) {\n  x\n}\n\npub fn main() {\n  { \"\" |> id } ++ { \"\" |> id }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec id(I) -> I.
id(X) ->
    X.

-file("/root/project/test/my/mod.rakun", 6).
-spec main() -> binary().
main() ->
    <<(begin
            _pipe = <<""/utf8>>,
            id(_pipe)
        end)/binary,
        (begin
            _pipe@1 = <<""/utf8>>,
            id(_pipe@1)
        end)/binary>>.
