compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__rest_variable_rewriting.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" ++ x -> x\n    _ -> \"Unknown\"\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(binary()) -> binary().
go(X) ->
    case X of
        <<"Hello, "/utf8, X@1/binary>> ->
            X@1;

        _ ->
            <<"Unknown"/utf8>>
    end.
