compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__string_of_number_concat.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn go(x) {\n  x ++ \"1\"\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  x ++ "1"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(binary()) -> binary().
go(X) ->
    <<X/binary, "1"/utf8>>.
