compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__string_prefix.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 139
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" ++ name -> name\n    _ -> \"Unknown\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "Hello, " ++ name -> name
    _ -> "Unknown"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(binary()) -> binary().
go(X) ->
    case X of
        <<"Hello, "/utf8, Name/binary>> ->
            Name;

        _ ->
            <<"Unknown"/utf8>>
    end.
