compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__string_prefix_assignment.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 153
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" as greeting ++ name -> greeting\n    _ -> \"Unknown\"\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(binary()) -> binary().
go(X) ->
    case X of
        <<Greeting:7/binary, Name/binary>> when Greeting =:= <<"Hello, "/utf8>> ->
            Greeting;

        _ ->
            <<"Unknown"/utf8>>
    end.
