compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__string_prefix_assignment_with_escape_sequences.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 183
expression: "\npub fn go(x) {\n  let _ = case x {\n    \"\\f\" as start ++ rest -> \"test\"\n    \"\\n\" as start ++ rest -> \"test\"\n    \"\\r\" as start ++ rest -> \"test\"\n    \"\\t\" as start ++ rest -> \"test\"\n    \"\\\"\" as start ++ rest -> \"test\"\n    \"\\\\\" as start ++ rest -> \"test\"\n    \"\\f \\n \\r \\t \\\" \\\\\" as start ++ rest -> \"control chars with prefix assignment\"\n    \"\\u{9}\" as start ++ rest -> \"test\"\n    \"\\u{000009}\" as start ++ rest -> \"test\"\n    \"\\u{21}\" as start ++ rest -> \"test\"\n    \"\\u{100}\" as start ++ rest -> \"test\"\n    \"\\u{1000}\" as start ++ rest -> \"test\"\n    \"\\u{1F600}\" as start ++ rest -> \"test\"\n    \"\\u{1f600}\" as start ++ rest -> \"test\"\n    \"\\u{01F600}\" as start ++ rest -> \"test\"\n    \"\\u{01f600}\" as start ++ rest -> \"test\"\n    \"\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}\" as start ++ rest -> \"test\"\n    _ -> \"Unknown\"\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(binary()) -> binary().
go(X) ->
    _ = case X of
        <<Start:1/binary, Rest/binary>> when Start =:= <<"\f"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@1:1/binary, Rest@1/binary>> when Start@1 =:= <<"\n"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@2:1/binary, Rest@2/binary>> when Start@2 =:= <<"\r"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@3:1/binary, Rest@3/binary>> when Start@3 =:= <<"\t"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@4:1/binary, Rest@4/binary>> when Start@4 =:= <<"\""/utf8>> ->
            <<"test"/utf8>>;

        <<Start@5:1/binary, Rest@5/binary>> when Start@5 =:= <<"\\"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@6:11/binary, Rest@6/binary>> when Start@6 =:= <<"\f \n \r \t \" \\"/utf8>> ->
            <<"control chars with prefix assignment"/utf8>>;

        <<Start@7:1/binary, Rest@7/binary>> when Start@7 =:= <<"\x{9}"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@8:1/binary, Rest@8/binary>> when Start@8 =:= <<"\x{000009}"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@9:1/binary, Rest@9/binary>> when Start@9 =:= <<"\x{21}"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@10:2/binary, Rest@10/binary>> when Start@10 =:= <<"\x{100}"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@11:3/binary, Rest@11/binary>> when Start@11 =:= <<"\x{1000}"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@12:4/binary, Rest@12/binary>> when Start@12 =:= <<"\x{1F600}"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@13:4/binary, Rest@13/binary>> when Start@13 =:= <<"\x{1f600}"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@14:4/binary, Rest@14/binary>> when Start@14 =:= <<"\x{01F600}"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@15:4/binary, Rest@15/binary>> when Start@15 =:= <<"\x{01f600}"/utf8>> ->
            <<"test"/utf8>>;

        <<Start@16:22/binary, Rest@16/binary>> when Start@16 =:= <<"\x{9} \x{000009} \x{21} \x{100} \x{1000} \x{1F600} \x{01F600}"/utf8>> ->
            <<"test"/utf8>>;

        _ ->
            <<"Unknown"/utf8>>
    end.
