compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__string_prefix_assignment_with_multiple_subjects.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"1\" as digit ++ _ | \"2\" as digit ++ _ -> digit\n    _ -> \"Unknown\"\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(binary()) -> binary().
go(X) ->
    case X of
        <<Digit:1/binary, _/binary>> when Digit =:= <<"1"/utf8>> ->
            Digit;

        <<Digit:1/binary, _/binary>> when Digit =:= <<"2"/utf8>> ->
            Digit;

        _ ->
            <<"Unknown"/utf8>>
    end.
