compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__string_prefix_shadowing.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" as x ++ name -> x\n    _ -> \"Unknown\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "Hello, " as x ++ name -> x
    _ -> "Unknown"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(binary()) -> binary().
go(X) ->
    case X of
        <<X@1:7/binary, Name/binary>> when X@1 =:= <<"Hello, "/utf8>> ->
            X@1;

        _ ->
            <<"Unknown"/utf8>>
    end.
